// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Category List renders correctly 1`] = `
Array [
  <label
    htmlFor="pet-select"
  >
    Choose a Category
  </label>,
  <select
    id="pet-select"
    onChange={[Function]}
  >
    <option
      value={343}
    >
      bob
    </option>
  </select>,
]
`;

exports[`Question Engine Renders Correctly 1`] = `
Array [
  <label
    htmlFor="pet-select"
  >
    Choose a Category
  </label>,
  <select
    id="pet-select"
    onChange={[Function]}
  >
    <option
      value={1}
    >
      sport
    </option>
  </select>,
  <p>
     
    In the Super Mario Bros. Series, what is Yoshi's scientific name?
     
  </p>,
  <ul>
    <em>
       
      <li>
         
        T. Yoshisaur Munchakoopas
         
      </li>
       
    </em>
    <li>
       
      Yoshi
       
    </li>
    <li>
       
      T. Yoshisotop Munchakoopas
       
    </li>
    <li>
       
      Yossy
       
    </li>
    <li>
       
      Anne Boleyn
       
    </li>
  </ul>,
  <p>
     
    Which of his six wives was Henry VIII married to the longest?
     
  </p>,
  <ul>
    <em>
       
      <li>
         
        Catherine of Aragon
         
      </li>
       
    </em>
    <li>
       
      Jane Seymour
       
    </li>
    <li>
       
      Anne Boleyn
       
    </li>
    <li>
       
      Catherin Parr
       
    </li>
  </ul>,
]
`;

exports[`renders correctly 1`] = `
<div
  className="App"
/>
`;
